Fix the issue with Add Another Expense link jumping to the top of the page with successive clicks.  Also added cursor pointer to the link

--- a/app/javascript/src/stylesheets/pages/case_contacts.scss
+++ b/app/javascript/src/stylesheets/pages/case_contacts.scss
@@ -118,6 +118,9 @@ legend {
     padding: .8rem;
     text-decoration: underline;
 }
+#add-another-expense {
+    cursor: pointer;
+}
 
 .pr-7 {
     padding-right: 1.5rem !important;
